--- a/package.json
+++ b/package.json
@@ -1,37 +1,31 @@
 {
-  "name": "react-lazyload-fadein",
-  "version": "1.0.0",
-  "description": "react-lazyload-fadein React component",
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "files": [
-    "css",
-    "es",
-    "lib",
-    "umd"
-  ],
-  "scripts": {
-    "build": "nwb build-react-component",
-    "clean": "nwb clean-module && nwb clean-demo",
-    "start": "nwb serve-react-demo",
-    "test": "nwb test-react",
-    "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server"
-  },
-  "dependencies": {},
-  "peerDependencies": {
-    "react": "16.x"
-  },
-  "devDependencies": {
-    "nwb": "0.21.x",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
-  },
-  "author": "",
-  "homepage": "",
-  "license": "MIT",
-  "repository": "",
-  "keywords": [
-    "react-component"
-  ]
+    "name": "react-lazyload-fadein",
+    "version": "1.0.0",
+    "description":
+        "A React component to lazyload children with a nice fadein effect",
+    "main": "lib/index.js",
+    "module": "es/index.js",
+    "files": ["css", "es", "lib", "umd"],
+    "scripts": {
+        "build": "nwb build-react-component",
+        "clean": "nwb clean-module && nwb clean-demo",
+        "start": "nwb serve-react-demo",
+        "test": "nwb test-react",
+        "test:coverage": "nwb test-react --coverage",
+        "test:watch": "nwb test-react --server"
+    },
+    "dependencies": {},
+    "peerDependencies": {
+        "react": "16.x"
+    },
+    "devDependencies": {
+        "nwb": "0.21.x",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
+    },
+    "author": "",
+    "homepage": "",
+    "license": "MIT",
+    "repository": "",
+    "keywords": ["react-component"]
 }
