Extract FadeIn from jamcommerce project

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
     "name": "react-lazyload-fadein",
     "version": "1.0.0",
-    "description":
-        "A React component to lazyload children with a nice fadein effect",
+    "description": "A React component to lazyload children with a nice fadein effect",
     "main": "lib/index.js",
     "module": "es/index.js",
-    "files": ["css", "es", "lib", "umd"],
+    "files": [
+        "css",
+        "es",
+        "lib",
+        "umd"
+    ],
     "scripts": {
         "build": "nwb build-react-component",
         "clean": "nwb clean-module && nwb clean-demo",
@@ -14,7 +18,11 @@
         "test:coverage": "nwb test-react --coverage",
         "test:watch": "nwb test-react --server"
     },
-    "dependencies": {},
+    "dependencies": {
+        "prop-types": "^15.6.0",
+        "react-lazyload": "^2.3.0",
+        "react-transition-group": "^2.2.1"
+    },
     "peerDependencies": {
         "react": "16.x"
     },
@@ -27,5 +35,7 @@
     "homepage": "",
     "license": "MIT",
     "repository": "",
-    "keywords": ["react-component"]
+    "keywords": [
+        "react-component"
+    ]
 }
