--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react": "16.x"
     },
     "devDependencies": {
+        "chroma-js": "^1.3.6",
         "d3": "^4.13.0",
         "nwb": "0.21.x",
         "react": "^16.2.0",
